# fs-ai

./: CLAUDE.md  Cargo.toml  README.md
crates/fs-ai/: Cargo.toml
crates/fs-ai/src/: lib.rs  main.rs
crates/fs-manager-ai/: Cargo.toml
crates/fs-manager-ai/src/: lib.rs
src/: component.rs  controller.rs  conversation.rs  keys.rs  lib.rs  rest.rs  view.rs
