[package]
name        = "fs-ai"
description = "FreeSynergy AI — AI assistant with LLM adapter abstraction"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-ai"

[lib]
name = "fs_ai"
path = "src/lib.rs"

[[bin]]
name = "fs-ai"
path = "src/main.rs"

[dependencies]
fs-render     = { path = "../fs-render" }
fs-manager-ai = { path = "../fs-managers/ai" }
fs-i18n       = { path = "../fs-i18n" }
fs-error      = { path = "../fs-libs/fs-error" }

async-trait        = "0.1"
chrono             = { version = "0.4", features = ["serde"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "2"
toml               = "0.8"
tracing            = "0.1"
tokio              = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# REST + OpenAPI
axum              = "0.7"
utoipa            = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tower-http        = { version = "0.6", features = ["trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build         = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
