[package]
name        = "fs-manager-ai"
description = "FreeSynergy AI Manager — backend logic for local AI engine management"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
